[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcticdb-mcp"
version = "0.1.1"
description = "MCP server that gives AI assistants full read/write access to ArcticDB"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Yassir Laaouach" }
]
keywords = ["arcticdb", "mcp", "llm", "ai", "dataframe", "timeseries", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "arcticdb",
    "fastmcp",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/YMuskrat/arcticdb-mcp"
Issues = "https://github.com/YMuskrat/arcticdb-mcp/issues"

[project.scripts]
arcticdb-mcp = "arcticdb_mcp.main:main"

